fix: update swagger docs and basepath
